修复草稿逻辑